currentSite/style.css
:root {
  --vs-black: #081a1c;
  --highlight-blue: #02535c;
  --highlight-blue-light: #0cb5c8;
}

body {
  /* Hides scrollbar */
  -ms-overflow-style: none;
  scrollbar-width: none;
  background-color: var(--vs-black);
  color: white;
  font-family: "Quicksand", sans-serif;
}

body::-webkit-scrollbar {
  display: none;
}

a:link {
  color: var(--highlight-blue-light);
  background-color: transparent;
  text-decoration: none;
}
a:visited {
  color: var(--highlight-blue-light);
  background-color: transparent;
  text-decoration: none;
}

.bg-img-container {
  display: flex;
}

.bg-img-container h1{
  position: absolute;
  padding: 1%;
  margin: 0;
  background-color: var(--highlight-blue);
}

.bg-img-container::before {
  content: "";
  left: 0;
  right: 0;
  z-index: -1;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  height: 100%;
}

.nav-tabs .nav-item.show, .nav-tabs .nav-link.active {
  background: transparent;
  backdrop-filter: brightness(40%);
  border-color: var(--highlight-blue);
  border-bottom: 2px solid;
  color: white;
  font-weight: bold;
}

.nav-tabs .nav-link {
  color: white;
}

.card{
  border-color: var(--highlight-blue);
  background-size: 100% auto;
  color: white;
}

.card h2{
  backdrop-filter: brightness(40%);
  -webkit-backdrop-filter:brightness(40%);
  margin-bottom: 4%;
}

.card-body{
  backdrop-filter: brightness(30%);
  -webkit-backdrop-filter:brightness(30%);
}

.education-card{
  background-image: url("seashore.jpg");
  background-position: top;
}

.work-card{
  background-image: url("my-road.jpg");
  background-position: top;
}

#top-container {
  height: max(200px,45vh);
  align-items: end;
  justify-content: center;
}

#top-container::before {
  background-image: url("aros.jpg");
  background-size: auto 90vmax;
  background-position-y: -40vmax;
}

#bottom-container {
  margin-top: 20%;
  height: max(200px,35vh);
  align-items: center;
  justify-content: center;
}

#bottom-container::before {
  background-image: url("seashore.jpg");
  background-position: bottom;
}

#introduction-container {
  margin-top: max(21vh, 12vw);
}

#introduction-container h3 {
  font-style: bold;
  font-size: larger;
  font-style: italic;
}

#introduction-container h2 {
  font-family: "Sono", sans-serif;
}

#profile-picture-container {
  display: block;
  position: absolute;
  width: 30vh;
  min-width: 15vw;
  aspect-ratio: 1/1;
  border-radius: 50%;
  margin-bottom: min(-15vh, -8vw);
  background-image: url("me-color.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position-x: 10%;
  background-position-y: 10%;
}

.flex-column {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 3%;
  margin-bottom: 3%;
}

.card-row {
  text-align: justify;
  line-height: 1.5;
  justify-content: center;
  align-items: center;
  margin-top: 5%;
}

.text-row h2{
  font-family: "Sono", sans-serif;
  font-weight: bold;
  text-align: start;
}

#education-container {
  height: max(200px,35vh);
  align-items: end;
}

#education-container::before {
  background-image: url("aarhus-universitet.jpg");
  background-size: auto 90vmax;
}

#work-container {
  height: max(200px,35vh);
  align-items: end;
  justify-content: end;
}

#work-container::before {
  background-image: url("iceberg.jpg");
  background-size: auto 90vmax;
}

@media only screen and (max-device-width: 1366px) {
  .bg-img-container::before {
    background-attachment: scroll;
  }
}
/* useful 
  border-color: blue;
  border-style: solid;
   */

